New wpt failures in /screen-orientation/non-fully-active.html
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox111 | --- | fixed |
People
(Reporter: wpt-sync, Assigned: m_kato)
References
Details
(Whiteboard: [wpt])
Attachments
(1 file)
Syncing wpt PR 36641 found new untriaged test failures in CI
Tests Affected
New Tests That Don't Pass
- /screen-orientation/non-fully-active.html [wpt.fyi]
- Attempting to lock non-fully active documents results in a InvalidStateError:
FAIL(Chrome:PASS, Safari:FAIL)
- Attempting to lock non-fully active documents results in a InvalidStateError:
CI Results
Gecko CI (Treeherder)
GitHub PR Head
Notes
These updates will be on mozilla-central once bug 1797242 lands.
Note: this bug is for tracking fixing the issues and is not
owned by the wpt sync bot.
This bug is linked to the relevant tests by an annotation in
https://github.com/web-platform-tests/wpt-metadata. These annotations
can be edited using the wpt interop dashboard
https://jgraham.github.io/wptdash/
If this bug is split into multiple bugs, please also update the
annotations, otherwise we are unable to track which wpt issues are
already triaged. Resolving as duplicate or closing this issue should
be cause the bot to automatically update or remove the annotation.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 1•3 years ago
|
||
Newer spec has to check current document is fully active. If not, we
have to throw InvalidStateError [*1] or AbortError [*2].
*1 https://w3c.github.io/screen-orientation/#lock-method
*2 https://w3c.github.io/screen-orientation/#applying-an-orientation-lock
Comment 3•3 years ago
|
||
| bugherder | ||
Description
•