Bug 1797411 - Check whether document is fully active. r=smaug

Newer spec has to check current document is fully active. If not, we
have to throw InvalidStateError [*1] or AbortError [*2].

*1 https://w3c.github.io/screen-orientation/#lock-method
*2 https://w3c.github.io/screen-orientation/#applying-an-orientation-lock

Differential Revision: https://phabricator.services.mozilla.com/D167485